--- a/css/css-zadania/1-formularz-html5/css/style.css
+++ b/css/css-zadania/1-formularz-html5/css/style.css
@@ -1,3 +1,7 @@
+*
+{
+    box-sizing: content-box;
+}   
 form
 {
     background-color: #213b50;
@@ -35,6 +39,8 @@ textarea:focus
 label
 {
     display: block;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 input[type="submit"]
 {
@@ -44,12 +50,19 @@ input[type="submit"]
     text-align: center;
     color: #ffffff;
     padding: 10px;
-    width: 60px;
+    width: auto;
+    height: auto;
     margin-top: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 20px;
 }
 option,select
 {
     background-color: #2b4a64;
+    border: 0;
+    width: 300px;
+    height: 30px;
 }
 option:focus
 {
@@ -62,6 +75,6 @@ label[for="agreement"],[for="male"],[for="female"]
 }
 input[type="radio"],[name="agreement"]
 {
-    width: 20px;
-    height: 20px;
+    width: auto;
+    height: auto;
 }
