--- a/moje portfolio/css/style.css
+++ b/moje portfolio/css/style.css
@@ -1,25 +1,251 @@
+
+/*general style*/
 *
 {
   font-family: 'Roboto', sans-serif;
-  color: #007bff;
-  background-color: #f2f1ed;
+  color: #777;
+  font-size: 16px;
 }
-header
+hr
+{
+  width: 70px;
+  height: 1px;
+  background-color: #007bff;
+  border: none;
+}
+.btn
+{
+  border: 1px solid #007bff;
+  color: #333;
+  text-transform: uppercase;
+  padding: 10px;
+  background-color: rgba(1,1,1,0);
+  cursor: pointer;
+  text-decoration: none;
+  transition: .3s all; /*zeby hover zadialal z opoznieniem*/
+}
+.btn:hover
+{
+  background-color: #007bff;
+  color: #fff;
+}
+
+/* end general style*/
+
+.main-header
 {
   background-image: url(../img/header.jpg);
-  padding:
-  background-size: 100%;
+  background-size: cover;
+  background-position: center;
+  padding: 13% 0;
+
+}
+.main-header-content
+{
+  display: flex;
+  align-items: center; /*rozmieszczenie w pionoe*/
+  flex-direction: column; /*rozmieszczenie jedno pod drugim*/
 }
 h1
 {
-  background-color: rgba(173, 216, 230, 0);
+  text-transform: uppercase;
+  font-size: 3.3em;
+  color: #007bff;
+  text-align: center;
 }
 h2
 {
-  background-color: rgba(173, 216, 230, 0);
+  font-size: 20px;
 }
-.button1
+h3
 {
-  background-color: rgba(173, 216, 230, 0);
-  border: 
+  text-transform: uppercase;
+  color: #000;
+  font-size: 2em;
+}
+
+/*navigation*/
+
+label
+{
+  display: none;
+}
+#drop-nav
+{
+  display: none;
+}
+
+.main-nav
+{
+  background-color: #007bff;
+  box-sizing: border-box; /*padding i border do wewnątrz boxa*/
+  margin: 0;
+}
+ul
+{
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 15px;
+}
+.nav-item
+{
+  list-style-type: none;
+}
+.nav-item a
+{
+  text-transform: uppercase;
+  padding: 5px 20px;
+  color:#fff;
+  text-decoration: none;
+  transition: .3s all;
+  display: inline-block;
+}
+.nav-item a:hover
+{
+  color:#007bff;
+  background-color: #fff;
+}
+/* o mnie - section */
+.about-me-section
+{
+  display: flex;
+  align-items: center; /*rozmieszczenie w pionoe*/
+  flex-direction: column; /*rozmieszczenie jedno pod drugim*/
+  padding: 3em 5em;
+}
+.me-photo
+{
+  border: 3px solid rgba(0,0,0,0);
+  border-radius: 50%;
+  margin: 1em 1em;
+  width: 20em;
+  height: 20em;
+}
+.about-me-section p
+{
+  text-align: center;
+  margin-bottom: 1em;
+}
+/* porfolio-section */
+.portfolio-section
+{
+  text-align: center;
+  background-color: #f2f1ed;
+}
+.portfolio-section .portfolio-wrapper
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+}
+.portfolio-section .portfolio-wrapper .portfolio-item
+{
+  position: relative;
+  display: inline-block;
+  flex-basis: 25%;
+  height: 200px;
+}
+.portfolio-item img
+{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.portfolio-item h4
+{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 123, 255, 0.6);
+  opacity: 0;
+  top: 0;
+  margin: 0;
+  line-height: 200px;
+  font-size: 2em;
+  color: #fff;
+}
+.portfolio-item h4:hover
+{
+  opacity: 1;
+}
+/*kontakt section*/
+.contact
+{
+  text-align: center;
+}
+form
+{
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 2em;
+
+}
+.input-text
+{
+  flex-basis: 43%;
+  margin: 1em 0;
+  padding: 0.5em;
+}
+#message
+{
+  flex-basis: 100%;
+  margin: 1em 0;
+  padding: 0.5em;
+  height: 4em;
+}
+form .btn
+{
+  margin: 0 auto;
+}
+.input-text:focus, textarea:focus
+{
+  outline: none;
+}
+/*font awesome*/
+.social-links
+{
+  padding: 3em;
+  text-align: center;
+}
+[class*="fab"]
+{
+  font-size: 2em;
+  padding: 0 1em;
+  text-decoration: none;
+  color: #007bff;
+}
+[class*="fab"]:hover
+{
+  color: #004085;
+}
+.social-icon
+{
+  text-decoration: none;
+}
+
+/*footer*/
+footer
+{
+  font-size: 1em;
+  padding: 2em;
+  text-align: center;
+  width: 100%;
+  background-color: rgb(199, 199, 199);
+}
+.social-icon
+{
+  text-decoration: none;
+}
+.social-icon:hover
+{
+  color: #004085;
 }
