--- a/css/css-zadania/16-zadanie-domowe-odliczanie/css/style.css
+++ b/css/css-zadania/16-zadanie-domowe-odliczanie/css/style.css
@@ -17,18 +17,41 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    opacity: 0;
+    animation-name: count-down; /*nazwa własana animacji*/
+    animation-duration: 1s; /*czas trawania animacji*/
+    animation-iteration-count: 1; /*powtarzalność*/
+    animation-delay: 1s;
+    color: #23ffg5;
 }
+@keyframes count-down
+{
+    0%,100%
+    {
+        opacity: 0;
+    }
+    1%
+    {
+        opacity: 1;
+    }
+    99%
+    {
+        opacity: 1;
+    }
+}
+
+/*
 .box-3
 {
     opacity: 0;
-    animation-name: box-3-appear; /*nazwa własana animacji*/
-    animation-duration: 1s; /*czas trawania animacji*/
-    animation-iteration-count: 1; /*powtarzalność w nieskończoność*/
+    animation-name: box-3-appear; 
+    animation-duration: 1s; /
+    animation-iteration-count: 1; 
     animation-delay: 1s;
 }
 @keyframes box-3-appear 
 {
-    0%,100% /*startowy i ostateczny punkt*/
+    0%,100% 
     {
         opacity: 0;
     }
@@ -51,7 +74,7 @@
 }
 @keyframes box-2-appear 
 {
-    0%,100% /*startowy i ostateczny punkt*/
+    0%,100% 
     {
         opacity: 0;
     }
@@ -74,7 +97,7 @@
 }
 @keyframes box-1-appear 
 {
-    0%,100% /*startowy i ostateczny punkt*/
+    0%,100% 
     {
         opacity: 0;
     }
@@ -97,7 +120,7 @@
 }
 @keyframes box-0-appear 
 {
-    0%,100% /*startowy i ostateczny punkt*/
+    0%,100% 
     {
         opacity: 0;
     }
@@ -110,6 +133,7 @@
         opacity: 1;
     }
 }
+*/
 .box-love
 {
     opacity: 0;
@@ -123,7 +147,7 @@
 }
 @keyframes box-love-appear 
 {
-    0% /*startowy i ostateczny punkt*/
+    0%
     {
         opacity: 0;
     }
