--- a/sass - warsztaty/gulp-project/app/css/style.css
+++ b/sass - warsztaty/gulp-project/app/css/style.css
@@ -2,10 +2,9 @@
   box-sizing: border-box; }
 
 body {
+  margin: 0;
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  color: #fff;
-  margin: 0; }
+  font-size: 16px; }
 
 .container {
   display: flex;
@@ -29,16 +28,51 @@ body {
       font-size: 2em;
       margin-right: 10px;
       color: #ecd407; }
+    .main-header .container .header-contact {
+      display: flex; }
+      .main-header .container .header-contact .fas {
+        font-size: 2em;
+        margin-right: 10px; }
+      .main-header .container .header-contact .contact-info {
+        display: flex;
+        flex-direction: column; }
 
-.header-contact {
-  display: flex; }
-  .header-contact .fas {
-    font-size: 2em;
-    margin-right: 10px; }
-
-.contact-info {
-  display: flex;
-  flex-direction: column; }
+.form-section {
+  background-image: url(../img/background.png);
+  background-position: top;
+  background-size: cover;
+  height: 100vh;
+  min-height: 700px; }
+  .form-section-item {
+    position: absolute;
+    top: 25%;
+    right: 10%;
+    width: 370px; }
+    .form-section-item h2 {
+      color: #fff; }
+      .form-section-item h2 span {
+        color: #ecd407; }
+    .form-section-item form {
+      display: flex;
+      flex-direction: column;
+      background-color: #001d8a;
+      padding: 10px; }
+      .form-section-item form header {
+        color: #fff;
+        font-weight: 600;
+        font-size: 1.2em;
+        margin-bottom: 10px; }
+      .form-section-item form input:not([type='submit']), .form-section-item form textarea {
+        padding: 15px;
+        border: none;
+        margin-bottom: 10px; }
+      .form-section-item form input[type='submit'] {
+        width: 100px;
+        background-color: #ecd407;
+        padding: 20px;
+        border: none;
+        font-size: 1.2em;
+        font-weight: 700; }
 
 footer {
   background-color: #292929;
@@ -55,8 +89,9 @@ footer {
         display: inline-block;
         background-color: #ecd407;
         height: 50px;
-        width: 50;
+        width: 50px;
         line-height: 50px;
+        color: #222;
         margin-bottom: 10px; }
     footer .container p {
-      font-size: 0.7em; }
+      font-size: 0.8em; }
