--- a/sass - warsztaty/gulp-project/app/scss/style.scss
+++ b/sass - warsztaty/gulp-project/app/scss/style.scss
@@ -1,5 +1,7 @@
 @import 'variables';
 @import 'mixins';
+
 @import 'general';
-@import 'navigation';
+@import 'header';
+@import 'form';
 @import 'footer';
